fix: move jvm gc options to variables